minor IntMap.copyFrom performance improvement